{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 18,
  "lineage": "ce98995f-cf30-ed39-fc5e-bc284918a9c4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/772afc27-3268-48ad-ab0f-01a34476bbeb/resourceGroups/my-resource-group/providers/Microsoft.Network/networkInterfaces/my-nic",
            "internal_domain_name_suffix": "e0aed31aa3re3hnrqzi0qqwffc.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/772afc27-3268-48ad-ab0f-01a34476bbeb/resourceGroups/my-resource-group/providers/Microsoft.Network/publicIPAddresses/my-pip",
                "subnet_id": "/subscriptions/772afc27-3268-48ad-ab0f-01a34476bbeb/resourceGroups/my-resource-group/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/app-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "00-22-48-D4-D8-08",
            "name": "my-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "my-resource-group",
            "virtual_machine_id": "/subscriptions/772afc27-3268-48ad-ab0f-01a34476bbeb/resourceGroups/my-resource-group/providers/Microsoft.Compute/virtualMachines/resume-vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "my-nic",
            "resource_group_name": "my-resource-group",
            "subscription_id": "772afc27-3268-48ad-ab0f-01a34476bbeb"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/772afc27-3268-48ad-ab0f-01a34476bbeb/resourceGroups/my-resource-group/providers/Microsoft.Network/networkInterfaces/my-nic|/subscriptions/772afc27-3268-48ad-ab0f-01a34476bbeb/resourceGroups/my-resource-group/providers/Microsoft.Network/networkSecurityGroups/my-nsg",
            "network_interface_id": "/subscriptions/772afc27-3268-48ad-ab0f-01a34476bbeb/resourceGroups/my-resource-group/providers/Microsoft.Network/networkInterfaces/my-nic",
            "network_security_group_id": "/subscriptions/772afc27-3268-48ad-ab0f-01a34476bbeb/resourceGroups/my-resource-group/providers/Microsoft.Network/networkSecurityGroups/my-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/772afc27-3268-48ad-ab0f-01a34476bbeb/resourceGroups/my-resource-group/providers/Microsoft.Network/networkSecurityGroups/my-nsg",
            "location": "centralindia",
            "name": "my-nsg",
            "resource_group_name": "my-resource-group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "my-nsg",
            "resource_group_name": "my-resource-group",
            "subscription_id": "772afc27-3268-48ad-ab0f-01a34476bbeb"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/772afc27-3268-48ad-ab0f-01a34476bbeb/resourceGroups/my-resource-group/providers/Microsoft.Network/networkSecurityGroups/my-nsg/securityRules/Allow8080",
            "name": "Allow8080",
            "network_security_group_name": "my-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "my-resource-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow8080",
            "network_security_group_name": "my-nsg",
            "resource_group_name": "my-resource-group",
            "subscription_id": "772afc27-3268-48ad-ab0f-01a34476bbeb"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/772afc27-3268-48ad-ab0f-01a34476bbeb/resourceGroups/my-resource-group/providers/Microsoft.Network/networkSecurityGroups/my-nsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "my-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "my-resource-group",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowSSH",
            "network_security_group_name": "my-nsg",
            "resource_group_name": "my-resource-group",
            "subscription_id": "772afc27-3268-48ad-ab0f-01a34476bbeb"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/772afc27-3268-48ad-ab0f-01a34476bbeb/resourceGroups/my-resource-group/providers/Microsoft.Network/publicIPAddresses/my-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.219.22.39",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "my-pip",
            "resource_group_name": "my-resource-group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "my-pip",
            "resource_group_name": "my-resource-group",
            "subscription_id": "772afc27-3268-48ad-ab0f-01a34476bbeb"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/772afc27-3268-48ad-ab0f-01a34476bbeb/resourceGroups/my-resource-group/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "my-resource-group",
            "virtual_network_name": "my-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "app-subnet",
            "resource_group_name": "my-resource-group",
            "subscription_id": "772afc27-3268-48ad-ab0f-01a34476bbeb",
            "virtual_network_name": "my-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f7418026-0760-4e62-9db1-8651a842c52a",
            "id": "/subscriptions/772afc27-3268-48ad-ab0f-01a34476bbeb/resourceGroups/my-resource-group/providers/Microsoft.Network/virtualNetworks/my-vnet",
            "location": "centralindia",
            "name": "my-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "my-resource-group",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/772afc27-3268-48ad-ab0f-01a34476bbeb/resourceGroups/my-resource-group/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/app-subnet",
                "name": "app-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "my-vnet",
            "resource_group_name": "my-resource-group",
            "subscription_id": "772afc27-3268-48ad-ab0f-01a34476bbeb"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}